test/TestPhases/namecheck/invalid/recursion.blc
module

// recursion leads to a name checking error
function f()
    f()
end

activity a()
    run a()
end
